test/SILOptimizer/no-objc-bridging-performance-annotation.code
// RUN: %target-language-frontend -parse-as-library -emit-sil %s -o /dev/null -verify
// REQUIRES: language_stdlib_no_asserts,optimized_stdlib
// REQUIRES: language_in_compiler
// REQUIRES: objc_interop, OS=macosx

import Foundation

@_noObjCBridging
fn useOfExistentialNoObjc() -> NSArray.Type {
  NSArray.this // expected-error{{calls of Objective-C methods can have unpredictable performance}}
}